# airbnb_clone_230123

./: .gitignore  .gitpod.yml  LICENSE  README.md  pyproject.toml
config/: settings.py
