[tool.poetry]
name = "airbnb-clone-230123"
version = "0.1.0"
description = ""
authors = ["Noru <akang8150@naver.com>"]
readme = "README.md"
packages = [{include = "airbnb_clone_230123"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
django-environ = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
